--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <p><br>I will be joining as a Research Fellow in Applied Software Engineering (KTP Associate) at Centre for Research on Evolution, Search and Testing (<a href="https://www.ucl.ac.uk/crest/">CREST</a>), Department of Computer Science,
                         University College London(UCL) and working with <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/">Prof.Federica</a> and <a href="http://www0.cs.ucl.ac.uk/staff/J.Petke/index.html">Dr.Justyna</a> in <a href="https://solar.cs.ucl.ac.uk/index.html">SOLAR group</a>.
                         Prior to that I am a PhD student at <a href="http://www.se.fudan.edu.cn/">Software Engineering Lab</a>, Fudan University. My advisor is <a href="https://cspengxin.github.io/">Prof.Xin Peng</a> and<br>supervised by <a href="https://chenbihuan.github.io/">Prof.Bihuan Chen</a>.
-                        My research interests mainly lies in software analysis.<br><br></p>
+                        My research interests mainly lie in software analysis.<br><br></p>
                 </header>
                 <a href="#publication" class="jumplink pic">
                     <span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
