--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="#publication" class="icon solid fa-book"><span>Publications</span></a>
             <a href="#education" class="icon solid fa-graduation-cap"><span>Education</span></a>
             <a href="#awards" class="icon solid fa-certificate"><span>Awards</span></a>
-            <a href="#contact" class="icon solid fa-user"><span>Contact</span></a>
+            <a href="#contact" class="icon solid fa-user"><span>Contacts</span></a>
             <!-- <a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a> -->
         </nav>
 
