--- a/index.html
+++ b/index.html
@@ -74,23 +74,27 @@
                         <hr>
                         <ol>
                             <li>
-                                <p><b><font size="3" color="#0b5394">[ASE’21] </font></b> <strong>Finding Replacements for Missing APIs in Library Update.</strong> <br><u>Kaifeng Huang</u>, Bihuan Chen, Linghao Pan, Shuai Wu, and Xin Peng.<em>In Proceedings of 36th IEEE/ACM International Conference on Automated Software Engineering</em>,
+                                <p><b><font size="3" color="#0b5394">[ASE’21] </font></b> <strong>Finding Replacements for Missing APIs in Library Update.</strong> <br><u>Kaifeng Huang</u>, Bihuan Chen, Linghao Pan, Shuai Wu, and Xin Peng.<em>&nbsp;In Proceedings of 36th IEEE/ACM International Conference on Automated Software Engineering</em>,
                                     Melbourne, Australia, accepted to appear, 2021</p>
                             </li>
                             <li>
-                                <p><b><font size="3" color="#0b5394">[FSE’20] </font></b> <strong>Interactive, Effort-Aware Library Version Harmonization.</strong> <br><u>Kaifeng Huang</u>, Bihuan Chen, Bowen Shi, Ying Wang, Congying Xu, and Xin Peng.<em>In Proceedings of the ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering, Sacramento, California, United States</em></p>
+                                <p><b><font size="3" color="#0b5394">[FSE’20] </font></b> <strong>Interactive, Effort-Aware Library Version Harmonization.</strong> <br><u>Kaifeng Huang</u>, Bihuan Chen, Bowen Shi, Ying Wang, Congying Xu, and Xin Peng.<em>&nbsp;In Proceedings of the ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering, Sacramento, California, United States</em></p>
                             </li>
                             <li>
                                 <p><b><font size="3" color="#0b5394">[ICSME’20] </font></b> <strong>An Empirical Study of Usages, Updates and Risks of Third-Party Libraries in Java Projects.</strong> <br>
-                                    <font size="3" color="#0b5394"> 🏆IEEE TCSE Distinguished Paper Award</font><br>Ying Wang, Bihuan Chen, <u>Kaifeng Huang</u>, Bowen Shi, Congying Xu, Xin Peng, Yijian Wu and Yang Liu.<em>In Proceedings of the 36th IEEE International Conference on Software Maintenance and Evolution, Adelaide, Australia</em></p>
+                                    <div id="distinguished">
+                                        <font size="3" color="#0b5394">&nbsp;&nbsp;🏆IEEE TCSE Distinguished Paper Award&nbsp;&nbsp;</font>
+                                    </div><br>Ying Wang, Bihuan Chen, <u>Kaifeng Huang</u>, Bowen Shi, Congying Xu, Xin Peng, Yijian Wu and Yang Liu.<em>&nbsp;In Proceedings of the 36th IEEE International Conference on Software Maintenance and Evolution, Adelaide, Australia</em></p>
                             </li>
                             <li>
                                 <p><b><font size="3" color="#0b5394">[ASE’18] </font></b> <strong>CLDIFF: Generating Concise Linked Code Differences.</strong> <br>
-                                    <font size="3" color="#0b5394">🏆ACM SIGSOFT Distinguished Paper Award</font><br><u>Kaifeng Huang</u>, Bihuan Chen, Xin Peng, Daihong Zhou, Ying Wang, Yang Liu, and Wenyun Zhao.<em>In Proceedings of the 33rd IEEE/ACM International Conference on Automated Software Engineering, Montpellier, France</em>                                    </p>
+                                    <div id="distinguished">
+                                        <font size="3" color="#0b5394">&nbsp;&nbsp;🏆ACM SIGSOFT Distinguished Paper Award&nbsp;&nbsp;</font>
+                                    </div><br><u>Kaifeng Huang</u>, Bihuan Chen, Xin Peng, Daihong Zhou, Ying Wang, Yang Liu, and Wenyun Zhao.<em>&nbsp;In Proceedings of the 33rd IEEE/ACM International Conference on Automated Software Engineering, Montpellier, France</em>                                    </p>
                             </li>
                             <li>
                                 <p><b><font size="3" color="#0b5394">[ICSA’20] </font></b> <strong>DesignDiff: Continuously Modeling Software Design Difference from Code Revisions.</strong> <br>Xiao Wang, Lu Xiao, <u>Kaifeng Huang</u>, Bihuan Chen, Yutong
-                                    Zhao, and Yang Liu.<em>In Proceedings of the IEEE International Conference on Software Architecture, Salvador, Bahia, Brazil</em> </p>
+                                    Zhao, and Yang Liu.<em>&nbsp;In Proceedings of the IEEE International Conference on Software Architecture, Salvador, Bahia, Brazil</em> </p>
                             </li>
                         </ol>
                     </div>
