--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                 <header>
                     <h1>Kaifeng Huang - Home</h1>
                     <h5>Software Engineering</h5>
-                    <p><br>I will be joining as a Research Fellow in Applied Software Engineering (KTP Associate) at Centre for Research on Evolution, Search and Testing (<a href="https://www.ucl.ac.uk/crest/">CREST</a>), Department of Computer Science,
-                        University College London(UCL) and working with <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/">Prof.Federica</a> and <a href="http://www0.cs.ucl.ac.uk/staff/J.Petke/index.html">Dr.Justyna</a> in <a href="https://solar.cs.ucl.ac.uk/index.html">SOLAR group</a>.
-                        Prior to that I am a PhD student at <a href="http://www.se.fudan.edu.cn/">Software Engineering Lab</a>, Fudan University. My advisor is <a href="https://cspengxin.github.io/">Prof.Xin Peng</a> and<br>supervised by <a href="https://chenbihuan.github.io/">Prof.Bihuan Chen</a>.
-                        My research interests mainly lie in software analysis.<br><br></p>
+                    <p><br>I am a PhD student at <a href="http://www.se.fudan.edu.cn/">Software Engineering Lab</a>, Fudan University. My advisor is <a href="https://cspengxin.github.io/">Prof.Xin Peng</a> and<br>supervised by <a href="https://chenbihuan.github.io/">Prof.Bihuan Chen</a>.
+                        <!-- My research interests mainly lie in software analysis.<br><br></p>
+                        I will be joining as a Research Fellow in Applied Software Engineering (KTP Associate) at Centre for Research on Evolution, Search and Testing (<a href="https://www.ucl.ac.uk/crest/">CREST</a>), Department of Computer Science, University College London(UCL) and working with <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/">Prof.Federica</a> and <a href="http://www0.cs.ucl.ac.uk/staff/J.Petke/index.html">Dr.Justyna</a> in <a href="https://solar.cs.ucl.ac.uk/index.html">SOLAR group</a>. -->
+                        <!-- Prior to that  -->
                 </header>
                 <a href="#publication" class="jumplink pic">
                     <span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
@@ -74,7 +74,7 @@
                         <hr>
                         <ol>
                             <li>
-                                <p><b><font size="3" color="#0b5394">[ASE’21] </font></b> <strong>Finding Replacements for Missing APIs in Library Update.</strong> <br><u>Kaifeng Huang</u>, Bihuan Chen, Linghao Pan, Shuai Wu, and Xin Peng.<em>&nbsp;In Proceedings of 36th IEEE/ACM International Conference on Automated Software Engineering</em>,
+                                <p><b><font size="3" color="#0b5394">[ASE’21] </font></b> <strong>Finding Replacements for Missing APIs in Library Update.</strong> <br><u>Kaifeng Huang</u>, Bihuan Chen, Linghao Pan, Shuai Wu, and Xin Peng.<em>&nbsp;In Proceedings of the 36th IEEE/ACM International Conference on Automated Software Engineering</em>,
                                     Melbourne, Australia, accepted to appear, 2021</p>
                             </li>
                             <li>
