--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <ol>
                             <li>
                                 <p><b><font size="3" color="#0b5394">[ASE’21] </font></b> <strong>Finding Replacements for Missing APIs in Library Update.</strong> <br><u>Kaifeng Huang</u>, Bihuan Chen, Linghao Pan, Shuai Wu, and Xin Peng.<em>&nbsp;In Proceedings of the 36th IEEE/ACM International Conference on Automated Software Engineering</em>,
-                                    Melbourne, Australia, accepted to appear, 2021</p>
+                                    Melbourne, Australia, 2021, p266-278</p>
                             </li>
                             <li>
                                 <p><b><font size="3" color="#0b5394">[FSE’20] </font></b> <strong>Interactive, Effort-Aware Library Version Harmonization.</strong> <br><u>Kaifeng Huang</u>, Bihuan Chen, Bowen Shi, Ying Wang, Congying Xu, and Xin Peng.<em>&nbsp;In Proceedings of the ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering, Sacramento, California, United States, 2020, p518-529.</em></p>
