--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                     Melbourne, Australia, 2021, p266-278</p>
                             </li>
                             <li>
-                                <p><b><font size="3" color="#0b5394">[FSE’20] </font></b> <strong>Interactive, Effort-Aware Library Version Harmonization.</strong> <br><u>Kaifeng Huang</u>, Bihuan Chen, Bowen Shi, Ying Wang, Congying Xu, and Xin Peng.<em>&nbsp;In Proceedings of the ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering, Sacramento, California, United States, 2020, p518-529.</em></p>
+                                <p><b><font size="3" color="#0b5394">[FSE’20] </font></b> <strong>Interactive, Effort-Aware Library Version Harmonization.</strong> <br><u>Kaifeng Huang</u>, Bihuan Chen, Bowen Shi, Ying Wang, Congying Xu, and Xin Peng.<em>&nbsp;In Proceedings of the 28th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering, Sacramento, California, United States, 2020, p518-529.</em></p>
                             </li>
                             <li>
                                 <p><b><font size="3" color="#0b5394">[ICSME’20] </font></b> <strong>An Empirical Study of Usages, Updates and Risks of Third-Party Libraries in Java Projects.</strong> <br>
