--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <!-- <hr> -->
                         <ol>
                             <li>
-                                <p><b><font size="3" color="#0b5394">[ASE’21] </font></b> <strong>Finding Replacements for Missing APIs in Library Update.</strong> <br><u>Kaifeng Huang</u>, Bihuan Chen, Linghao Pan, Shuai Wu, and Xin Peng.<em>&nbsp;In Proceedings of the 36th IEEE/ACM International Conference on Automated Software Engineering</em>,
+                                <p><b><font size="3" color="#0b5394">[ASE’21] </font></b> <strong>RepFinder: Finding Replacements for Missing APIs in Library Update.</strong> <br><u>Kaifeng Huang</u>, Bihuan Chen, Linghao Pan, Shuai Wu, and Xin Peng.<em>&nbsp;In Proceedings of the 36th IEEE/ACM International Conference on Automated Software Engineering</em>,
                                     Melbourne, Australia, 2021, p266-278</p>
                             </li>
                             <li>
