--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <!-- Nav -->
         <nav id="nav">
-            <a href="#" class="icon solid fa-home"><span>Home</span></a>
+            <a href="#home" class="icon solid fa-home"><span>Home</span></a>
             <a href="#publication" class="icon solid fa-book"><span>Publications</span></a>
             <a href="#education" class="icon solid fa-graduation-cap"><span>Education</span></a>
             <a href="#awards" class="icon solid fa-certificate"><span>Awards</span></a>
@@ -262,6 +262,7 @@
     <script src="assets/js/browser.min.js"></script>
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
+    <script src="assets/js/keyboard.min.js"></script>
     <script src="assets/js/main.js"></script>
 
 </body>
