--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <!-- Me -->
             <article id="home" class="panel intro">
                 <header>
-                    <h1>Kaifeng Huang - Home</h1>
+                    <h1>Kaifeng Huang - 黄凯锋</h1>
                     <h5>Software Engineering</h5>
                     <p><br>I am a PhD student at <a href="http://www.se.fudan.edu.cn/">Software Engineering Lab</a>, Fudan University. My advisor is <a href="https://cspengxin.github.io/">Prof.Xin Peng</a> and<br>supervised by <a href="https://chenbihuan.github.io/">Prof.Bihuan Chen</a>.
                         <!-- My research interests mainly lie in software analysis.<br><br></p>
