--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
                 <header>
                     <h1>Kaifeng Huang - 黄凯锋</h1>
                     <h5>Software Engineering</h5>
-                    <p><br>I am a PhD student at <a href="http://www.se.fudan.edu.cn/">Software Engineering Lab</a>, Fudan University. My advisor is <a href="https://cspengxin.github.io/">Prof.Xin Peng</a> and<br>supervised by <a href="https://chenbihuan.github.io/">Prof.Bihuan Chen</a>.
-                        <!-- My research interests mainly lie in software analysis.<br><br></p>
-                        I will be joining as a Research Fellow in Applied Software Engineering (KTP Associate) at Centre for Research on Evolution, Search and Testing (<a href="https://www.ucl.ac.uk/crest/">CREST</a>), Department of Computer Science, University College London(UCL) and working with <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/">Prof.Federica</a> and <a href="http://www0.cs.ucl.ac.uk/staff/J.Petke/index.html">Dr.Justyna</a> in <a href="https://solar.cs.ucl.ac.uk/index.html">SOLAR group</a>. -->
-                        <!-- Prior to that  -->
+                    <p><br>I am a postdoc at <a href="http://www.se.fudan.edu.cn/">Software Engineering Lab</a>, Fudan University. I got my PhD from Fudan University in 2022, supervised by <a href="https://cspengxin.github.io/">Xin Peng</a> and <a href="https://chenbihuan.github.io/">Bihuan Chen</a>.
+                        My research interest focuses on software analysis, OSS supply chain.
+                        <!-- <br> -->
                 </header>
                 <a href="#publication" class="jumplink pic">
                     <span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
@@ -119,7 +118,7 @@
                             <!-- <hr> -->
                             <ul>
                                 <li>
-                                    <p><strong>Fudan University</strong>，Shanghai，PhD — Sept., 2016- Jan., 2022(Expected)<br>Software Engineering, School of Computer Science</p>
+                                    <p><strong>Fudan University</strong>，Shanghai，PhD — Sept., 2016- Jan., 2022<br>Software Engineering, School of Computer Science</p>
                                 </li>
                                 <li>
                                     <p><strong>Donghua University</strong>，Shanghai，Bachelor — Sept., 2012- Jul., 2016<br>Electronics Engineering, School of Information Science and Technology</p>
