--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
                         <!-- <hr> -->
                         <ol>
                             <li>
+                                <p><b><font size="3" color="#0b5394">[EMSE’22] </font></b> <strong>Characterizing Usages, Updates and Risks of Third-Party Libraries in Java Projects.</strong> <br><u>Kaifeng Huang</u>, Bihuan Chen, Congying Xu, Ying Wang,
+                                    Bowen Shi, Xin Peng, Yijian Wu, and Yang Liu.<em>&nbsp;Empirical Software Engineering</em>, accepted, 2022. (An invited extended version of the ICSME'20 paper)</p>
+                            </li>
+                            <li>
                                 <p><b><font size="3" color="#0b5394">[ASE’21] </font></b> <strong>RepFinder: Finding Replacements for Missing APIs in Library Update.</strong> <br><u>Kaifeng Huang</u>, Bihuan Chen, Linghao Pan, Shuai Wu, and Xin Peng.<em>&nbsp;In Proceedings of the 36th IEEE/ACM International Conference on Automated Software Engineering</em>,
                                     Melbourne, Australia, 2021, p266-278</p>
                             </li>
