--- a/index.html
+++ b/index.html
@@ -74,33 +74,51 @@
                         <ol>
                             <li>
                                 <p><b><font size="3" color="#0b5394">[EMSE’22] </font></b> <strong>Characterizing Usages, Updates and Risks of Third-Party Libraries in Java Projects.</strong> <br><u>Kaifeng Huang</u>, Bihuan Chen, Congying Xu, Ying Wang,
-                                    Bowen Shi, Xin Peng, Yijian Wu, and Yang Liu.<em>&nbsp;Empirical Software Engineering</em>, accepted, 2022. (An invited extended version of the ICSME'20 paper)</p>
+                                    Bowen Shi, Xin Peng, Yijian Wu, and Yang Liu.<em>&nbsp;Empirical Software Engineering</em>, accepted, 2022. (An invited extended version of the ICSME'20 paper)
+                                    <div class="hidden" hidden="true">录用时间：2022-02-11，发表时间：NA
+                                    <div>
+                                </p>
                             </li>
                             <li>
-                                <p><b><font size="3" color="#0b5394">[ASE’21] </font></b> <strong>RepFinder: Finding Replacements for Missing APIs in Library Update.</strong> <br><u>Kaifeng Huang</u>, Bihuan Chen, Linghao Pan, Shuai Wu, and Xin Peng.<em>&nbsp;In Proceedings of the 36th IEEE/ACM International Conference on Automated Software Engineering</em>,
-                                    Melbourne, Australia, 2021, p266-278</p>
+                                <p><b><font size="3" color="#0b5394">[ASE’21] </font></b> <strong>RepFinder: Finding Replacements for Missing APIs in Library Update.</strong> <br><u>Kaifeng Huang</u>, Bihuan Chen, Linghao Pan, Shuai Wu, and Xin Peng.<em>&nbsp;In Proceedings of the 36th IEEE/ACM International Conference on Automated Software Engineering, Melbourne, Australia, 2021, p266-278</em>
+                                    <div class="hidden" hidden="true">录用时间：2021-07-08，会议时间：2021-11-14 to 2021-11-20，发表时间：NA
+                                    <div>
+                                </p>
+                                   
                             </li>
                             <li>
-                                <p><b><font size="3" color="#0b5394">[FSE’20] </font></b> <strong>Interactive, Effort-Aware Library Version Harmonization.</strong> <br><u>Kaifeng Huang</u>, Bihuan Chen, Bowen Shi, Ying Wang, Congying Xu, and Xin Peng.<em>&nbsp;In Proceedings of the 28th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering, Sacramento, California, United States, 2020, p518-529.</em></p>
+                                <p><b><font size="3" color="#0b5394">[FSE’20] </font></b> <strong>Interactive, Effort-Aware Library Version Harmonization.</strong> <br><u>Kaifeng Huang</u>, Bihuan Chen, Bowen Shi, Ying Wang, Congying Xu, and Xin Peng.<em>&nbsp;In Proceedings of the 28th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering, Sacramento, California, United States, 2020, p518-529.</em>
+                                    <div class="hidden" hidden="true">录用时间：2020-05-20，会议时间：2020-11-6 to 2020-11-16，发表时间：NA
+                                    <div>
+                                </p>
                             </li>
                             <li>
                                 <p><b><font size="3" color="#0b5394">[ICSME’20] </font></b> <strong>An Empirical Study of Usages, Updates and Risks of Third-Party Libraries in Java Projects.</strong> <br>
                                     <div id="distinguished">
                                         <font size="3" color="#0b5394">&nbsp;&nbsp;🏆IEEE TCSE Distinguished Paper Award&nbsp;&nbsp;</font>
-                                    </div><br>Ying Wang, Bihuan Chen, <u>Kaifeng Huang</u>, Bowen Shi, Congying Xu, Xin Peng, Yijian Wu and Yang Liu.<em>&nbsp;In Proceedings of the 36th IEEE International Conference on Software Maintenance and Evolution, Adelaide, Australia, 2020, p35-45.</em></p>
+                                    </div><br>Ying Wang, Bihuan Chen, <u>Kaifeng Huang</u>, Bowen Shi, Congying Xu, Xin Peng, Yijian Wu and Yang Liu.<em>&nbsp;In Proceedings of the 36th IEEE International Conference on Software Maintenance and Evolution, Adelaide, Australia, 2020, p35-45.</em>
+                                    <div class="hidden" hidden="true">录用时间：2020-08-04，会议时间：2020-9-27 to 2020-10-03，发表时间：NA
+                                    <div>
+                                </p>
                             </li>
                             <li>
                                 <p><b><font size="3" color="#0b5394">[ASE’18] </font></b> <strong>CLDIFF: Generating Concise Linked Code Differences.</strong> <br>
                                     <div id="distinguished">
                                         <font size="3" color="#0b5394">&nbsp;&nbsp;🏆ACM SIGSOFT Distinguished Paper Award&nbsp;&nbsp;</font>
-                                    </div><br><u>Kaifeng Huang</u>, Bihuan Chen, Xin Peng, Daihong Zhou, Ying Wang, Yang Liu, and Wenyun Zhao.<em>&nbsp;In Proceedings of the 33rd IEEE/ACM International Conference on Automated Software Engineering, Montpellier, France, 2018, p679-690.</em>                                    </p>
+                                    </div><br><u>Kaifeng Huang</u>, Bihuan Chen, Xin Peng, Daihong Zhou, Ying Wang, Yang Liu, and Wenyun Zhao.<em>&nbsp;In Proceedings of the 33rd IEEE/ACM International Conference on Automated Software Engineering, Montpellier, France, 2018, p679-690.</em>                              
+                                    <div class="hidden" hidden="true">录用时间：2018-07-04，会议时间：2018-09-03 to 2018-09-07，发表时间：NA
+                                    <div>      
+                                </p>
                             </li>
                             <li>
                                 <p><b><font size="3" color="#0b5394">[ICSA’20] </font></b> <strong>DesignDiff: Continuously Modeling Software Design Difference from Code Revisions.</strong> <br>Xiao Wang, Lu Xiao, <u>Kaifeng Huang</u>, Bihuan Chen, Yutong
-                                    Zhao, and Yang Liu.<em>&nbsp;In Proceedings of the IEEE International Conference on Software Architecture, Salvador, Bahia, Brazil, 2020, p179-190.</em> </p>
+                                    Zhao, and Yang Liu.<em>&nbsp;In Proceedings of the IEEE International Conference on Software Architecture, Salvador, Bahia, Brazil, 2020, p179-190.</em> 
+                                    <div class="hidden" hidden="true">录用时间：2020-02-19，会议时间：2020-09-02 to 2020-09-06，发表时间：NA
+                                    <div>
+                                </p>
                             </li>
                         </ol>
-                    </div>
+                        </div>
                 </section>
                 <a href="#education">
                     <span class="arrow icon solid fa-chevron-right"><span></span></span>
@@ -248,25 +266,25 @@
 
             </article>
 
-        </div>
+            </div>
 
-        <!-- Footer -->
-        <div id="footer">
-            <ul class="copyright">
-                <li>&copy;Copyright </li>
-                <li><a href="http://html5up.net">Template from HTML5 UP</a></li>
-            </ul>
-        </div>
+            <!-- Footer -->
+            <div id="footer">
+                <ul class="copyright">
+                    <li>&copy;Copyright </li>
+                    <li><a href="http://html5up.net">Template from HTML5 UP</a></li>
+                </ul>
+            </div>
 
-    </div>
+            </div>
 
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/keyboard.min.js"></script>
-    <script src="assets/js/main.js"></script>
+            <!-- Scripts -->
+            <script src="assets/js/jquery.min.js"></script>
+            <script src="assets/js/browser.min.js"></script>
+            <script src="assets/js/breakpoints.min.js"></script>
+            <script src="assets/js/util.js"></script>
+            <script src="assets/js/keyboard.min.js"></script>
+            <script src="assets/js/main.js"></script>
 
 </body>
 
