--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
                             <li>2018 ACM SIGSOFT Distinguished Paper Award</li>
                             <li>2018 CCF Prototype Competition 2rd Prize</li>
                             <li>2017 Scholarship of Academic Excellence, Fudan University</li>
+                            <li>2016 Shanghai Outstanding Graduate</li>
                         </ul>
                     </div>
                 </section>
