--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <span class="arrowl icon solid fa-chevron-left"><span></span></span>
                 </a>
                 <header>
-                    <h2>What's New</h2>
+                    <h2>What's New?</h2>
                 </header>
                 <hr class="rounded3">
                 <div class="row">
