--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <div class="content">
                         <ul>
                             <li>
-                                <p><span class="mydate"><strong>[2022.04]&nbsp;</strong></span>I was awarded the Outstanding Undergraduate of Fudan University.</p>
+                                <p><span class="mydate"><strong>[2022.04]&nbsp;</strong></span>I was awarded the Outstanding Graduate of Fudan University.</p>
                             </li>
                             <li>
                                 <p><span class="mydate"><strong>[2022.02]&nbsp;</strong></span>Our paper "Characterizing Usages, Updates and Risks of Third-Party Libraries in Java Projects" is accepted by EMSE 2022.</p>
