--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     <div class="content">
                         <!-- <hr> -->
                         <ul>
-                            <li>2022 Outstanding Undergraduate of Fudan University</li>
+                            <li>2022 Outstanding Graduate of Fudan University</li>
                             <li>2022 Super-PostDoctoral Fellowship, Fudan University</li>
                             <li>2021 Scholarship of Academic Excellence, Fudan University</li>
                             <li>2020 Scholarship of Academic Excellence, Fudan University</li>
