--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a href="#home" class="icon solid fa-home"><span>Home</span></a>
             <a href="#news" class="icon solid fa-newspaper"><span>News</span></a>
             <a href="#publication" class="icon solid fa-book"><span>Publications</span></a>
-            <a href="#education" class="icon solid fa-graduation-cap"><span>Education</span></a>
+            <a href="#education" class="icon solid fa-graduation-cap"><span>Background</span></a>
             <a href="#awards" class="icon solid fa-certificate"><span>Awards</span></a>
             <a href="#contact" class="icon solid fa-user"><span>Contacts</span></a>
             <!-- <a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a> -->
