--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
                 <div class="row">
                     <div class="content">
                         <ul>
+                            <!-- <li>
+                                <p><span class="mydate"><strong>[2022.06]&nbsp;</strong></span>Our paper "Tracking Patches for Open Source Software Vulnerabilities" is accepted by FSE 2022.</p>
+                                <p></p>
+                            </li> -->
                             <li>
                                 <p><span class="mydate"><strong>[2022.04]&nbsp;</strong></span>I was awarded the Outstanding Graduate of Fudan University.</p>
                             </li>
@@ -112,7 +116,7 @@
                                 <p></p>
                             </li>
                             <li>
-                                <p><span class="mydate"><strong>[2021.07]&nbsp;</strong></span>Our paper "RepFinder: Finding Replacements for Missing APIs in Library Update" is accepted by ASE 2022.</p>
+                                <p><span class="mydate"><strong>[2021.07]&nbsp;</strong></span>Our paper "RepFinder: Finding Replacements for Missing APIs in Library Update" is accepted by ASE 2021.</p>
                                 <p></p>
                             </li>
                         </ul>
