--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
                 <div class="row">
                     <div class="content">
                         <ul>
-                            <!-- <li>
+                            <li>
                                 <p><span class="mydate"><strong>[2022.06]&nbsp;</strong></span>Our paper "Tracking Patches for Open Source Software Vulnerabilities" is accepted by FSE 2022.</p>
                                 <p></p>
-                            </li> -->
+                            </li>
                             <li>
                                 <p><span class="mydate"><strong>[2022.04]&nbsp;</strong></span>I was awarded the Outstanding Graduate of Fudan University.</p>
                             </li>
@@ -143,9 +143,15 @@
                         <!-- <hr> -->
                         <ol>
                             <li>
+                                <p><b><font size="3" color="#0b5394">[FSE’22] </font></b> <strong>Tracking Patches for Open Source Software Vulnerabilities</strong><br>Congying Xu, Bihuan Chen, Chenhao Lu, <u>Kaifeng Huang</u>, Xin Peng, and Yang Liu.<em>&nbsp;In Proceedings of the 30th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering, Singapore</em>, accepted, 2022. 
+                                    <div class="hidden" hidden="true">录用时间：2022-06-14，发表时间：NA 会议时间 Mon 14 - Fri 18 November 2022.11-14-18
+                                    <div>
+                                </p>
+                            </li>
+                            <li>
                                 <p><b><font size="3" color="#0b5394">[EMSE’22] </font></b> <strong>Characterizing Usages, Updates and Risks of Third-Party Libraries in Java Projects.</strong> <br><u>Kaifeng Huang</u>, Bihuan Chen, Congying Xu, Ying Wang,
                                     Bowen Shi, Xin Peng, Yijian Wu, and Yang Liu.<em>&nbsp;Empirical Software Engineering</em>, accepted, 2022. (An invited extended version of the ICSME'20 paper)
-                                    <div class="hidden" hidden="true">录用时间：2022-02-11，发表时间：NA
+                                    <div class="hidden" hidden="true">录用时间：2022-02-11，发表时间：NA 
                                     <div>
                                 </p>
                             </li>
