--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
                             </li>
                             <li>
                                 <p><b><font size="3" color="#0b5394">[EMSE’22] </font></b> <strong>Characterizing Usages, Updates and Risks of Third-Party Libraries in Java Projects.</strong> <br><u>Kaifeng Huang</u>, Bihuan Chen, Congying Xu, Ying Wang,
-                                    Bowen Shi, Xin Peng, Yijian Wu, and Yang Liu.<em>&nbsp;Empirical Software Engineering</em>, accepted, 2022. (An invited extended version of the ICSME'20 paper)
-                                    <div class="hidden" hidden="true">录用时间：2022-02-11，发表时间：NA 
+                                    Bowen Shi, Xin Peng, Yijian Wu, and Yang Liu.<em>&nbsp;Empirical Software Engineering</em>, 2022. (An invited extended version of the ICSME'20 paper)
+                                    <div class="hidden" hidden="true">录用时间：2022-02-11，发表时间：2022-04-14
                                     <div>
                                 </p>
                             </li>
