--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
                     <div class="content">
                         <h3>Reviewers and PC Members:</h3>
                         <ul>
+                            <li>Science of Computer Programming</li>
                             <li>Empirical Software Engineering</li>
                             <li>Artifact Evaluation Track, ESEC/FSE 2023</li>
                             <li>Automated Software Engineering Journal</li>
